Font, Link, Padding Border, Position

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
 <body>
 
   <!-- Bagian Website-->
-  <div>
-      <a href="index.html" class="Menu">Home</a>
-      <a href="kontak.html"class="Menu">Kontak</a>
-      <a href="members.html"class="Menu">Member</a>
+  <div id="menu_wrep">
+      <a href="index.html" class="menu1" >Home</a>
+      <a href="kontak.html" class="menu1">Kontak</a>
+      <a href="members.html" class="menu1">Member</a>
   </div>
   <!-- Bagian Awal Heading-->
   <div>
     <h1> Dancingbearltd </h1>
     <h2> &nbsp;&nbsp;Haloo, Selamat Datang Di Dancingbearltd </h2>
     <p id="text_satu"> Tempat Penyedia Tasbrandeed termurah </p>
+    <p id= "pepanjang"> Dunia Fashion saat ini sedang berkembang, wanita maupun pria mempunyai style fashion yang berbeda, semuanya mengikuti trend fasion yang ada. Kami hadir untuk membanntu menyediakan produk fashion yang terbaru, terlengkap memiliki kualitas yang bagus dengan harga yang terjangkau. Sehingga dapat memenuhi kebutuhan fashion anda setiap moment dalam hidup anda. Stay Fashionable !!! </p>
   </div>
 
   <!-- Bagian Isi -->
+
   <div>
     <a href="https://www.instagram.com/dancingbearltd"> Instagram </a>
     <br>
@@ -36,7 +38,6 @@
   <div>
     <img src="image.jpg" alt="Contoh Tasbrandeed Dancingbearltd" height="100" width="100">
     <br>
-    <iframe src="http://sekolahkoding.com" height="300" width="300"></iframe>
     <br>
     <p> Setiap <em> Pembelian 3pcs </em> <i> Akan Di Kenakan </i> <b> Potongan Harga </b> </p>
   </div>
