--- a/kontak.html
+++ b/kontak.html
@@ -5,22 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kontak Dancingbearltd</title>
+
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Bagian Website-->
+
+  <div id="menu_kontak">
       <a href="index.html">Home</a>
       <a href="kontak.html">Kontak</a>
       <a href="members.html">Member</a>
+  </div>
 
   <!-- Bagian Awal Heading-->
-  <div>
-    <h1> Dancingbearltd </h1>
-    <h2>&nbsp;&nbsp; Haloo, Selamat Datang Di Dancingbearltd </h2>
-    <p> Tempat Penyedia Tasbrandeed termurah </p>
+  <div id="parent_h1">
+    <h1 id="h1_kontak"> Dancingbearltd </h1>
+  </div>
+
+  <div id="parent_h2">
+    <h2 id="h2_kontak">&nbsp;&nbsp; Product Dancingbearltd </h2>
+
   </div>
 
   <!-- Tabel Pada HTML -->
+
+  <div>
   <table border="1">
     <caption> Daftar Produk </caption>
     <tr>
@@ -39,16 +50,37 @@
     </tr>
   </table>
 
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam assumenda veniam doloribus molestiae, cum, at perspiciatis, repellat ad commodi corporis, beatae dolor expedita nobis. Soluta pariatur quam nostrum nobis, sunt deleniti accusantium. Sunt rerum molestiae suscipit voluptates nulla provident aperiam dolores distinctio pariatur sapiente iste magni dolorum dignissimos in accusamus assumenda culpa enim natus illo eaque perspiciatis placeat voluptatum, id. Quis eligendi soluta iusto? Blanditiis sapiente a porro repellendus quam ab necessitatibus fugiat quod recusandae eius! Impedit tempore aliquid odio dignissimos! Magni nesciunt harum architecto voluptates nulla veniam dolore, assumenda deleniti obcaecati voluptatum beatae provident est, voluptas corporis nisi quod. Architecto nisi eius eligendi voluptatibus, nulla, molestias quaerat hic aspernatur possimus inventore soluta error. Ab sapiente id ad illo alias veniam aperiam accusamus magnam, laborum quas. Perspiciatis vero quod dicta eius, alias, pariatur laboriosam, sint sunt natus nisi architecto. Amet cumque minima consectetur exercitationem quia, doloribus ex aliquam nisi vero iusto natus praesentium distinctio odit libero blanditiis neque, ipsum et, soluta dolore laudantium excepturi consequuntur similique iure tempora. Ex deserunt possimus nostrum odit, eaque illo maiores blanditiis atque. Praesentium dicta quibusdam ipsam mollitia ex molestias dolorem alias quas temporibus, eius voluptas, accusantium tenetur harum! Assumenda sint sapiente temporibus quasi molestiae laborum earum optio quis corporis, repellat nulla! Omnis aspernatur, ad magni repellat, excepturi alias provident nisi nesciunt eum consequatur suscipit delectus harum. Quas, animi, non. Veritatis eum consectetur eveniet omnis deserunt? Sint molestias eligendi, consectetur possimus deleniti tenetur facilis cum, minima, expedita ducimus dignissimos officia! Ullam modi distinctio fuga laudantium.</p>
+
   <!-- List Pada HTML -->
     <ul>
       <li> Hermes Kelly</li>
       <li> Channel </li>
+      <li> Dior</li>
+      <li> Gucci </li>
+      <li> Anello</li>
+      <li> Longchamp </li>
+      <li> YSL </li>
+      <li> Prada </li>
+      <li> Charles and Keith </li>
+      <li> Victoria Beckham </li>
+      <li> Zara </li>
     </ul>
 
     <ol>
       <li> Hermes Kelly</li>
       <li> Channel </li>
+      <li> Dior</li>
+      <li> Gucci </li>
+      <li> Anello</li>
+      <li> Longchamp </li>
+      <li> YSL </li>
+      <li> Prada </li>
+      <li> Charles and Keith </li>
+      <li> Victoria Beckham </li>
+      <li> Zara </li>
     </ol>
+
 
     <dl>
       <dt>Hermes Kelly</dt>
@@ -56,6 +88,7 @@
       <dt> Channel </dt>
       <dd> Pree Order </dd>
     </dl>
+ </div>
 
   <p> &copy; Dancingbearltd </p>
 
